# ChangeLog for gnome-base/gvfs
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.177 2012/05/05 05:38:09 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> gvfs-1.10.1.ebuild,
  gvfs-1.12.1.ebuild, gvfs-1.12.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*gvfs-1.12.2 (29 Apr 2012)

  29 Apr 2012; Pacho Ramos <pacho@gentoo.org> +gvfs-1.12.2.ebuild,
  -files/gvfs-1.12.0-afp-gcc-4.5.patch, -gvfs-1.12.0.ebuild:
  Version bump, remove old.

  24 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gvfs-1.10.1.ebuild,
  gvfs-1.12.0.ebuild, gvfs-1.12.1.ebuild:
  Make udev USE flag control everything udev-related to fix gvfs on bsd (bug
  #413303, thanks to Alexis Ballier).

*gvfs-1.12.1 (21 Apr 2012)

  21 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> +gvfs-1.12.1.ebuild:
  Version bump, fixes bugs in udisks and gphoto2 backends.

  13 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gvfs-1.12.0.ebuild,
  +files/gvfs-1.12.0-afp-gcc-4.5.patch:
  Fix building with gcc-4.5 and USE="afp", thanks to Travis Glenn Hansen for
  reporting.

  12 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gvfs-1.10.1.ebuild,
  gvfs-1.12.0.ebuild:
  Optionally depend on new split libgdu package if USE=gdu.

  02 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gvfs-1.10.1.ebuild,
  +files/gvfs-1.10.1-libimobiledevice-1.1.2.patch, gvfs-1.12.0.ebuild:
  Fix building against >=libimobiledevice-1.1.2 (bug #410411, thanks to Leo
  Laursen for reporting).

*gvfs-1.12.0 (28 Mar 2012)

  28 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gvfs-1.6.7-r1.ebuild, -files/gvfs-1.6.7-fix-renaming.patch,
  +gvfs-1.12.0.ebuild, metadata.xml:
  Version bump, supports using udisks instead of gnome-disk-utility for volume
  monitoring. Drop old.

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> gvfs-1.10.1.ebuild:
  alpha/ia64/sh/sparc stable wrt #393007
