@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/gvfs-1.12.2.ebuild,v 1.2 2012/05/05 05:38:09 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/gvfs-1.12.2.ebuild,v 1.3 2012/05/08 16:47:35 darkside Exp $
 
 EAPI=4
 GCONF_DEBUG=no
@@ -20,7 +20,7 @@ if [[ ${PV} = 9999 ]]; then
 	KEYWORDS=""
 	DOCS=""
 else
-	KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
+	KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd ~x86-interix ~amd64-linux ~x86-linux ~sparc-solaris ~x86-solaris"
 	DOCS="AUTHORS ChangeLog NEWS MAINTAINERS README TODO" # ChangeLog.pre-1.2 README.commits
 fi
 
@@ -71,7 +71,7 @@ pkg_setup() {
 		--disable-bash-completion
 		--disable-hal
 		--disable-schemas-compile
-		--with-dbus-service-dir=/usr/share/dbus-1/services
+		--with-dbus-service-dir="${EPREFIX}"/usr/share/dbus-1/services
 		$(use_enable afp)
 		$(use_enable archive)
 		$(use_enable avahi)
