@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gvfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.177 2012/05/05 05:38:09 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.178 2012/05/08 16:47:35 darkside Exp $
+
+  08 May 2012; Jeremy Olexa <darkside@gentoo.org> gvfs-1.12.2.ebuild:
+  Add prefix keywords and specify dbus-service-dir, no changes for Gentoo Linux
+  users
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> gvfs-1.10.1.ebuild,
   gvfs-1.12.1.ebuild, gvfs-1.12.2.ebuild:
